# LMS-alternative

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  connect.py  docgen.py  format.py  pyproject.toml  requirements.txt  test_firebase_connection.py  virtual.txt
docs/source/: conf.py  index.rst  installation.rst  modules.rst  user_guide.rst
docs/source/api/: index.rst  services.rst  ui.rst  utils.rst
docusaurus/main/: get_redirect_url.md  load_credentials.md  main.md  module.md  repair_filesystem.md  setup_paths.md
docusaurus/services/auth_service/: __init__.md  _load_client_info.md  _load_credentials.md  _log_token_status.md  _save_credentials.md  _validate_and_refresh_credentials.md  get_service.md  get_user_info.md  googleauth.md  is_authenticated.md  load_client_info.md  load_credentials.md  log_token_status.md  login_desktop.md  login_with_token.md  logout.md  module.md  save_credentials.md  validate_and_refresh_credentials.md
docusaurus/services/drive_service/: __init__.md  _execute_file_list_query.md  _execute_file_mutation.md  _get_cached.md  _invalidate_cache.md  _retry_request.md  _set_cache.md  _setup_lru_caches.md  create_folder.md  delete_file.md  driveservice.md  execute_file_list_query.md  execute_file_mutation.md  find_file.md  get_file_info.md  get_folder_tree.md  invalidate_cache.md  list_files.md  module.md  move_file.md  read_file_content.md  (+8 more)
services/: file_preview_service.py
src/: main.py
src/services/: auth_service.py  drive_service.py  fcm_integration.py  fcm_service.py  file_preview_service.py  notification.py  notification_service.py
src/ui/: dashboard.py  firebase_mobile_login.py  login.py  todo_view.py
src/utils/: common.py
ui/: dashboard.py  todo_view.py
ui/dashboard_modules/: favorites_manager.py  file_manager.py  folder_navigator.py  paste_links_manager.py
ui/todo_modules/: assignment_manager.py  data_manager.py  file_preview.py  storage_manager.py  student_manager.py  submission_manager.py
(+213 files in other folders)
