[project]
name = "lms-alternative"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ASTRALLIBERTAD", email = "astrallibertad@gmail.com" }
]
dependencies = [
  "flet >=0.70.0.dev0",
  "google-auth",
  "google-auth-oauthlib", 
  "google-api-python-client",
]

[tool.flet]
org = "com.pld1"
product = "LMS Alternative"
company = "PLD Group 1"
copyright = "Copyright (C) 2025 by PLD Group 1"

[tool.flet.app]
path = "src"
module = "main"

[build-system]
requires = ["flet"]
build-backend = "flet"